- added more tests (using junit5), configurations - added optional support for yaml urlmapper, added maven profile - added hacky check (to be idempotent) in method mapToURL call check (TurbineURLMapperService) - update BaseTestCase logging with log4j2 - fixed deprecated getInstance in TurbinePullService.java - typo fix in MappedTemplateLink.java
git-svn-id: https://svn.apache.org/repos/asf/turbine/core/branches/URLMapperService@1885436 13f79535-47bb-0310-9956-ffa450edef68